[package]
name = "weibo"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# logging
log = "0.4.7"
env_logger = "0.7.1"
# error handling
failure = "0.1.8"
# network
reqwest = { version = "0.10.6", features = ["json", "cookies"] }
tokio = { version = "0.2.21", features = ["macros"] }
# serde
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
# random
rand = "0.7.3"
